Consolidating and cleaning up test files to align with sources and reduce/combine some simple tests and moving classes into seaprate files