@@ -23,101 +23,59 @@ public class ArgumentConverterTest {
     @Test
     public void testConvertAndValidateString() {
         TypeDefinition typeDef = TypeDefinition.string();
-        Object result = ArgumentConverter.convertAndValidate("test", typeDef, null);
-        assertEquals("test", result);
-
-        result = ArgumentConverter.convertAndValidate(123, typeDef, null);
-        assertEquals("123", result);
+        assertEquals("test", ArgumentConverter.convertAndValidate("test", typeDef, null));
+        assertEquals("123", ArgumentConverter.convertAndValidate(123, typeDef, null));
     }
 
     @Test
     public void testConvertAndValidateInteger() {
         TypeDefinition typeDef = TypeDefinition.integer();
-        Object result = ArgumentConverter.convertAndValidate(42, typeDef, null);
-        assertEquals(42, result);
+        assertEquals(42, ArgumentConverter.convertAndValidate(42, typeDef, null));
+        assertEquals(42, ArgumentConverter.convertAndValidate(42.5, typeDef, null));
+        assertEquals(42, ArgumentConverter.convertAndValidate("42", typeDef, null));
+        assertEquals(42, ArgumentConverter.convertAndValidate(LuaInteger.valueOf(42), typeDef, null));
+        assertEquals(42, ArgumentConverter.convertAndValidate((byte) 42, typeDef, null));
+        assertEquals(42, ArgumentConverter.convertAndValidate((short) 42, typeDef, null));
+        assertEquals(42, ArgumentConverter.convertAndValidate(42L, typeDef, null));
+        assertEquals(42, ArgumentConverter.convertAndValidate(42.0f, typeDef, null));
+        assertEquals(42, ArgumentConverter.convertAndValidate(42.0, typeDef, null));
 
-        result = ArgumentConverter.convertAndValidate(42.5, typeDef, null);
-        assertEquals(42, result);
-
-        result = ArgumentConverter.convertAndValidate("42", typeDef, null);
-        assertEquals(42, result);
-
-        result = ArgumentConverter.convertAndValidate(LuaInteger.valueOf(42), typeDef, null);
-        assertEquals(42, result);
-    }
-
-    @Test
-    public void testConvertAndValidateIntegerInvalidThrows() {
-        TypeDefinition typeDef = TypeDefinition.integer();
-        assertThrows(IllegalArgumentException.class, () -> {
-            ArgumentConverter.convertAndValidate("not a number", typeDef, null);
-        });
+        assertThrows(IllegalArgumentException.class,
+                () -> ArgumentConverter.convertAndValidate("not a number", typeDef, null));
     }
 
     @Test
     public void testConvertAndValidateDouble() {
         TypeDefinition typeDef = TypeDefinition.doubleType();
-        Object result = ArgumentConverter.convertAndValidate(42.5, typeDef, null);
-        assertEquals(42.5, result);
+        assertEquals(42.5, ArgumentConverter.convertAndValidate(42.5, typeDef, null));
+        assertEquals(42.0, ArgumentConverter.convertAndValidate(42, typeDef, null));
+        assertEquals(42.5, ArgumentConverter.convertAndValidate("42.5", typeDef, null));
+        assertEquals(42.5, ArgumentConverter.convertAndValidate(LuaNumber.valueOf(42.5), typeDef, null));
+        assertEquals(42.0, ArgumentConverter.convertAndValidate((byte) 42, typeDef, null));
+        assertEquals(42.0, ArgumentConverter.convertAndValidate((short) 42, typeDef, null));
+        assertEquals(42.0, ArgumentConverter.convertAndValidate(42L, typeDef, null));
+        assertEquals(42.0, ArgumentConverter.convertAndValidate(42.0f, typeDef, null));
 
-        result = ArgumentConverter.convertAndValidate(42, typeDef, null);
-        assertEquals(42.0, result);
-
-        result = ArgumentConverter.convertAndValidate("42.5", typeDef, null);
-        assertEquals(42.5, result);
-
-        result = ArgumentConverter.convertAndValidate(LuaNumber.valueOf(42.5), typeDef, null);
-        assertEquals(42.5, result);
-    }
-
-    @Test
-    public void testConvertAndValidateDoubleInvalidThrows() {
-        TypeDefinition typeDef = TypeDefinition.doubleType();
-        assertThrows(IllegalArgumentException.class, () -> {
-            ArgumentConverter.convertAndValidate("not a number", typeDef, null);
-        });
+        assertThrows(IllegalArgumentException.class,
+                () -> ArgumentConverter.convertAndValidate("not a number", typeDef, null));
     }
 
     @Test
     public void testConvertAndValidateBoolean() {
         TypeDefinition typeDef = TypeDefinition.bool();
-        Object result = ArgumentConverter.convertAndValidate(true, typeDef, null);
-        assertEquals(true, result);
+        assertEquals(true, ArgumentConverter.convertAndValidate(true, typeDef, null));
+        assertEquals(true, ArgumentConverter.convertAndValidate("true", typeDef, null));
+        assertEquals(true, ArgumentConverter.convertAndValidate("yes", typeDef, null));
+        assertEquals(true, ArgumentConverter.convertAndValidate("1", typeDef, null));
+        assertEquals(false, ArgumentConverter.convertAndValidate("false", typeDef, null));
+        assertEquals(false, ArgumentConverter.convertAndValidate("no", typeDef, null));
+        assertEquals(false, ArgumentConverter.convertAndValidate("0", typeDef, null));
+        assertEquals(true, ArgumentConverter.convertAndValidate(1, typeDef, null));
+        assertEquals(false, ArgumentConverter.convertAndValidate(0, typeDef, null));
+        assertEquals(true, ArgumentConverter.convertAndValidate(LuaValue.TRUE, typeDef, null));
 
-        result = ArgumentConverter.convertAndValidate("true", typeDef, null);
-        assertEquals(true, result);
-
-        result = ArgumentConverter.convertAndValidate("yes", typeDef, null);
-        assertEquals(true, result);
-
-        result = ArgumentConverter.convertAndValidate("1", typeDef, null);
-        assertEquals(true, result);
-
-        result = ArgumentConverter.convertAndValidate("false", typeDef, null);
-        assertEquals(false, result);
-
-        result = ArgumentConverter.convertAndValidate("no", typeDef, null);
-        assertEquals(false, result);
-
-        result = ArgumentConverter.convertAndValidate("0", typeDef, null);
-        assertEquals(false, result);
-
-        result = ArgumentConverter.convertAndValidate(1, typeDef, null);
-        assertEquals(true, result);
-
-        result = ArgumentConverter.convertAndValidate(0, typeDef, null);
-        assertEquals(false, result);
-
-        result = ArgumentConverter.convertAndValidate(LuaValue.TRUE, typeDef, null);
-        assertEquals(true, result);
-    }
-
-    @Test
-    public void testConvertAndValidateBooleanInvalidThrows() {
-        TypeDefinition typeDef = TypeDefinition.bool();
-        assertThrows(IllegalArgumentException.class, () -> {
-            ArgumentConverter.convertAndValidate("maybe", typeDef, null);
-        });
+        assertThrows(IllegalArgumentException.class,
+                () -> ArgumentConverter.convertAndValidate("maybe", typeDef, null));
     }
 
     @Test
@@ -125,301 +83,141 @@ public class ArgumentConverterTest {
         EnumRegistry enumContext = createTestEnumRegistry();
         TypeDefinition typeDef = TypeDefinition.enumType("Difficulty");
 
-        Object result = ArgumentConverter.convertAndValidate("EASY", typeDef, enumContext);
-        assertEquals("EASY", result);
+        assertEquals("EASY", ArgumentConverter.convertAndValidate("EASY", typeDef, enumContext));
+        assertEquals("NORMAL", ArgumentConverter.convertAndValidate("NORMAL", typeDef, enumContext));
 
-        result = ArgumentConverter.convertAndValidate("NORMAL", typeDef, enumContext);
-        assertEquals("NORMAL", result);
+        assertThrows(IllegalArgumentException.class,
+                () -> ArgumentConverter.convertAndValidate("EASY", typeDef, null));
+        assertThrows(IllegalArgumentException.class, () -> ArgumentConverter
+                .convertAndValidate("EASY", TypeDefinition.enumType("NonExistent"), enumContext));
+        assertThrows(IllegalArgumentException.class,
+                () -> ArgumentConverter.convertAndValidate("INVALID", typeDef, enumContext));
     }
 
     @Test
-    public void testConvertAndValidateEnumNullContextThrows() {
-        TypeDefinition typeDef = TypeDefinition.enumType("Difficulty");
-        assertThrows(IllegalArgumentException.class, () -> {
-            ArgumentConverter.convertAndValidate("EASY", typeDef, null);
-        });
-    }
-
-    @Test
-    public void testConvertAndValidateEnumNotFoundThrows() {
-        EnumRegistry enumContext = createTestEnumRegistry();
-        TypeDefinition typeDef = TypeDefinition.enumType("NonExistent");
-        assertThrows(IllegalArgumentException.class, () -> {
-            ArgumentConverter.convertAndValidate("EASY", typeDef, enumContext);
-        });
-    }
-
-    @Test
-    public void testConvertAndValidateEnumInvalidValueThrows() {
-        EnumRegistry enumContext = createTestEnumRegistry();
-        TypeDefinition typeDef = TypeDefinition.enumType("Difficulty");
-        assertThrows(IllegalArgumentException.class, () -> {
-            ArgumentConverter.convertAndValidate("INVALID", typeDef, enumContext);
-        });
-    }
-
-    @Test
-    public void testConvertAndValidateList() {
-        TypeDefinition elementType = TypeDefinition.integer();
-        TypeDefinition listType = TypeDefinition.listOf(elementType);
-
+    public void testConvertAndValidateListFromMultipleSources() {
+        TypeDefinition intList = TypeDefinition.listOf(TypeDefinition.integer());
         List<Integer> input = Arrays.asList(1, 2, 3);
-        Object result = ArgumentConverter.convertAndValidate(input, listType, null);
-        assertNotNull(result);
-        assertTrue(result instanceof List);
-        List<?> resultList = (List<?>) result;
-        assertEquals(3, resultList.size());
-    }
-
-    @Test
-    public void testConvertAndValidateListFromLuaTable() {
-        TypeDefinition elementType = TypeDefinition.string();
-        TypeDefinition listType = TypeDefinition.listOf(elementType);
+        List<?> fromList = (List<?>) ArgumentConverter.convertAndValidate(input, intList, null);
+        assertEquals(3, fromList.size());
 
         LuaTable table = new LuaTable();
-        table.set(1, LuaString.valueOf("value1"));
-        table.set(2, LuaString.valueOf("value2"));
-        table.set(3, LuaString.valueOf("value3"));
-
-        Object result = ArgumentConverter.convertAndValidate(table, listType, null);
-        assertNotNull(result);
-        assertTrue(result instanceof List);
-        List<?> resultList = (List<?>) result;
-        assertEquals(3, resultList.size());
-    }
-
-    @Test
-    public void testConvertAndValidateListFromArray() {
-        TypeDefinition elementType = TypeDefinition.integer();
-        TypeDefinition listType = TypeDefinition.listOf(elementType);
+        table.set(1, LuaInteger.valueOf(1));
+        table.set(2, LuaInteger.valueOf(2));
+        table.set(3, LuaInteger.valueOf(3));
+        List<?> fromTable = (List<?>) ArgumentConverter.convertAndValidate(table, intList, null);
+        assertEquals(3, fromTable.size());
 
         Object[] array = new Object[] {1, 2, 3};
-        Object result = ArgumentConverter.convertAndValidate(array, listType, null);
-        assertNotNull(result);
-        assertTrue(result instanceof List);
+        assertTrue(ArgumentConverter.convertAndValidate(array, intList, null) instanceof List);
+
+        assertThrows(IllegalArgumentException.class,
+                () -> ArgumentConverter.convertAndValidate("not a list", intList, null));
     }
 
     @Test
-    public void testConvertAndValidateListInvalidThrows() {
-        TypeDefinition elementType = TypeDefinition.integer();
-        TypeDefinition listType = TypeDefinition.listOf(elementType);
-
-        assertThrows(IllegalArgumentException.class, () -> {
-            ArgumentConverter.convertAndValidate("not a list", listType, null);
-        });
-    }
-
-    @Test
-    public void testConvertAndValidateTable() {
-        TypeDefinition keyType = TypeDefinition.string();
-        TypeDefinition valueType = TypeDefinition.integer();
-        TypeDefinition tableType = TypeDefinition.tableOf(keyType, valueType);
+    public void testConvertAndValidateTableFromMultipleSources() {
+        TypeDefinition tableType =
+                TypeDefinition.tableOf(TypeDefinition.string(), TypeDefinition.integer());
 
         Map<String, Integer> input = new HashMap<>();
         input.put("key1", 1);
         input.put("key2", 2);
-
-        Object result = ArgumentConverter.convertAndValidate(input, tableType, null);
-        assertNotNull(result);
-        assertTrue(result instanceof Map);
-        Map<?, ?> resultTable = (Map<?, ?>) result;
-        assertEquals(2, resultTable.size());
-    }
-
-    @Test
-    public void testConvertAndValidateTableFromLuaTable() {
-        TypeDefinition keyType = TypeDefinition.string();
-        TypeDefinition valueType = TypeDefinition.integer();
-        TypeDefinition tableType = TypeDefinition.tableOf(keyType, valueType);
+        Map<?, ?> fromMap =
+                (Map<?, ?>) ArgumentConverter.convertAndValidate(input, tableType, null);
+        assertEquals(2, fromMap.size());
 
         LuaTable table = new LuaTable();
         table.set("key1", LuaInteger.valueOf(1));
         table.set("key2", LuaInteger.valueOf(2));
+        Map<?, ?> fromLua =
+                (Map<?, ?>) ArgumentConverter.convertAndValidate(table, tableType, null);
+        assertEquals(2, fromLua.size());
 
-        Object result = ArgumentConverter.convertAndValidate(table, tableType, null);
-        assertNotNull(result);
-        assertTrue(result instanceof Map);
-        Map<?, ?> resultTable = (Map<?, ?>) result;
-        assertEquals(2, resultTable.size());
-    }
-
-    @Test
-    public void testConvertAndValidateTableInvalidThrows() {
-        TypeDefinition keyType = TypeDefinition.string();
-        TypeDefinition valueType = TypeDefinition.integer();
-        TypeDefinition tableType = TypeDefinition.tableOf(keyType, valueType);
-
-        assertThrows(IllegalArgumentException.class, () -> {
-            ArgumentConverter.convertAndValidate("not a table", tableType, null);
-        });
+        assertThrows(IllegalArgumentException.class,
+                () -> ArgumentConverter.convertAndValidate("not a table", tableType, null));
     }
 
     @Test
     public void testConvertAndValidateTableWithListValues() {
-        TypeDefinition keyType = TypeDefinition.string();
-        TypeDefinition valueType = TypeDefinition.listOf(TypeDefinition.integer());
-        TypeDefinition tableType = TypeDefinition.tableOf(keyType, valueType);
+        TypeDefinition tableType = TypeDefinition.tableOf(TypeDefinition.string(),
+                TypeDefinition.listOf(TypeDefinition.integer()));
 
         Map<String, List<Integer>> input = new HashMap<>();
         input.put("key1", Arrays.asList(1, 2, 3));
         input.put("key2", Arrays.asList(4, 5));
 
-        Object result = ArgumentConverter.convertAndValidate(input, tableType, null);
-        assertNotNull(result);
-        assertTrue(result instanceof Map);
+        assertTrue(ArgumentConverter.convertAndValidate(input, tableType, null) instanceof Map);
     }
 
     @Test
-    public void testConvertAndValidateWithConstraintRange() {
-        ArgumentConstraint constraint = ArgumentConstraint.range(1, 100);
-        TypeDefinition typeDef = TypeDefinition.integer(constraint);
+    public void testConvertAndValidateWithConstraints() {
+        TypeDefinition rangeType =
+                TypeDefinition.integer(ArgumentConstraint.range(1, 100));
+        assertEquals(50, ArgumentConverter.convertAndValidate(50, rangeType, null));
+        assertThrows(IllegalArgumentException.class,
+                () -> ArgumentConverter.convertAndValidate(150, rangeType, null));
+        assertThrows(IllegalArgumentException.class,
+                () -> ArgumentConverter.convertAndValidate(0, rangeType, null));
 
-        Object result = ArgumentConverter.convertAndValidate(50, typeDef, null);
-        assertEquals(50, result);
+        TypeDefinition stepType =
+                TypeDefinition.integer(ArgumentConstraint.discreteRange(0, 100, 10));
+        assertEquals(50, ArgumentConverter.convertAndValidate(50, stepType, null));
+        assertThrows(IllegalArgumentException.class,
+                () -> ArgumentConverter.convertAndValidate(55, stepType, null));
 
-        assertThrows(IllegalArgumentException.class, () -> {
-            ArgumentConverter.convertAndValidate(150, typeDef, null);
-        });
+        TypeDefinition stringEnumType = TypeDefinition.string(
+                ArgumentConstraint.enumValues(Arrays.asList("A", "B", "C")));
+        assertEquals("A", ArgumentConverter.convertAndValidate("A", stringEnumType, null));
+        assertThrows(IllegalArgumentException.class,
+                () -> ArgumentConverter.convertAndValidate("D", stringEnumType, null));
 
-        assertThrows(IllegalArgumentException.class, () -> {
-            ArgumentConverter.convertAndValidate(0, typeDef, null);
-        });
-    }
-
-    @Test
-    public void testConvertAndValidateWithConstraintDiscreteRange() {
-        ArgumentConstraint constraint = ArgumentConstraint.discreteRange(0, 100, 10);
-        TypeDefinition typeDef = TypeDefinition.integer(constraint);
-
-        Object result = ArgumentConverter.convertAndValidate(50, typeDef, null);
-        assertEquals(50, result);
-
-        assertThrows(IllegalArgumentException.class, () -> {
-            ArgumentConverter.convertAndValidate(55, typeDef, null); // Not a multiple of 10
-        });
-    }
-
-    @Test
-    public void testConvertAndValidateWithConstraintEnum() {
-        List<Object> allowedValues = Arrays.asList("A", "B", "C");
-        ArgumentConstraint constraint = ArgumentConstraint.enumValues(allowedValues);
-        TypeDefinition typeDef = TypeDefinition.string(constraint);
-
-        Object result = ArgumentConverter.convertAndValidate("A", typeDef, null);
-        assertEquals("A", result);
-
-        assertThrows(IllegalArgumentException.class, () -> {
-            ArgumentConverter.convertAndValidate("D", typeDef, null);
-        });
-    }
-
-    @Test
-    public void testConvertAndValidateWithNumericEnumConstraint() {
-        ArgumentConstraint constraint = ArgumentConstraint.enumValues(Arrays.asList(1, 2, 3));
-        TypeDefinition typeDef = TypeDefinition.integer(constraint);
-
-        assertEquals(2, ArgumentConverter.convertAndValidate(2, typeDef, null));
-        assertEquals(2, ArgumentConverter.convertAndValidate(2.0, typeDef, null));
-
-        assertThrows(IllegalArgumentException.class, () -> {
-            ArgumentConverter.convertAndValidate(4, typeDef, null);
-        });
-        assertThrows(IllegalArgumentException.class, () -> {
-            ArgumentConverter.convertAndValidate(4.0, typeDef, null);
-        });
+        TypeDefinition numericEnumType =
+                TypeDefinition.integer(ArgumentConstraint.enumValues(Arrays.asList(1, 2, 3)));
+        assertEquals(2, ArgumentConverter.convertAndValidate(2, numericEnumType, null));
+        assertEquals(2, ArgumentConverter.convertAndValidate(2.0, numericEnumType, null));
+        assertThrows(IllegalArgumentException.class,
+                () -> ArgumentConverter.convertAndValidate(4, numericEnumType, null));
+        assertThrows(IllegalArgumentException.class,
+                () -> ArgumentConverter.convertAndValidate(4.0, numericEnumType, null));
     }
 
     @Test
     public void testConvertAndValidateNullThrows() {
-        TypeDefinition typeDef = TypeDefinition.string();
-        assertThrows(IllegalArgumentException.class, () -> {
-            ArgumentConverter.convertAndValidate(null, typeDef, null);
-        });
+        assertThrows(IllegalArgumentException.class,
+                () -> ArgumentConverter.convertAndValidate(null, TypeDefinition.string(), null));
     }
 
     @Test
-    public void testConvertAndValidateUnknownTypeThrows() {
-        // This would require creating a TypeDefinition with an invalid base type
-        // which is not possible through the public API, so we test the error path
-        // by testing with a complex type that might fail
-        TypeDefinition typeDef = TypeDefinition.listOf(TypeDefinition.integer());
-        assertThrows(IllegalArgumentException.class, () -> {
-            ArgumentConverter.convertAndValidate("not a list", typeDef, null);
-        });
-    }
-
-    @Test
-    public void testIntegerConversionFromVariousTypes() {
-        TypeDefinition typeDef = TypeDefinition.integer();
-
-        assertEquals(42, ArgumentConverter.convertAndValidate((byte) 42, typeDef, null));
-        assertEquals(42, ArgumentConverter.convertAndValidate((short) 42, typeDef, null));
-        assertEquals(42, ArgumentConverter.convertAndValidate(42L, typeDef, null));
-        assertEquals(42, ArgumentConverter.convertAndValidate(42.0f, typeDef, null));
-        assertEquals(42, ArgumentConverter.convertAndValidate(42.0, typeDef, null));
-    }
-
-    @Test
-    public void testDoubleConversionFromVariousTypes() {
-        TypeDefinition typeDef = TypeDefinition.doubleType();
-
-        assertEquals(42.0, ArgumentConverter.convertAndValidate((byte) 42, typeDef, null));
-        assertEquals(42.0, ArgumentConverter.convertAndValidate((short) 42, typeDef, null));
-        assertEquals(42.0, ArgumentConverter.convertAndValidate(42, typeDef, null));
-        assertEquals(42.0, ArgumentConverter.convertAndValidate(42L, typeDef, null));
-        assertEquals(42.0, ArgumentConverter.convertAndValidate(42.0f, typeDef, null));
-    }
-
-    @Test
-    public void testNestedListConversion() {
+    public void testNestedConversions() {
         TypeDefinition nestedListType =
                 TypeDefinition.listOf(TypeDefinition.listOf(TypeDefinition.integer()));
+        List<List<Integer>> nestedList = Arrays.asList(Arrays.asList(1, 2), Arrays.asList(3, 4));
+        assertTrue(
+                ArgumentConverter.convertAndValidate(nestedList, nestedListType, null) instanceof List);
 
-        List<List<Integer>> input = Arrays.asList(Arrays.asList(1, 2), Arrays.asList(3, 4));
-
-        Object result = ArgumentConverter.convertAndValidate(input, nestedListType, null);
-        assertNotNull(result);
-        assertTrue(result instanceof List);
-    }
-
-    @Test
-    public void testNestedTableConversion() {
         TypeDefinition nestedTableType = TypeDefinition.tableOf(TypeDefinition.string(),
                 TypeDefinition.tableOf(TypeDefinition.string(), TypeDefinition.integer()));
-
-        Map<String, Map<String, Integer>> input = new HashMap<>();
+        Map<String, Map<String, Integer>> nestedTable = new HashMap<>();
         Map<String, Integer> inner = new HashMap<>();
         inner.put("key", 1);
-        input.put("outer", inner);
+        nestedTable.put("outer", inner);
+        assertTrue(ArgumentConverter.convertAndValidate(nestedTable, nestedTableType,
+                null) instanceof Map);
 
-        Object result = ArgumentConverter.convertAndValidate(input, nestedTableType, null);
-        assertNotNull(result);
-        assertTrue(result instanceof Map);
-    }
-
-    @Test
-    public void testNestedGroupLikeTableConversion() {
-        // Table<String, Table<String, List<Integer>>> — two table layers, leaf values are lists
         TypeDefinition nestedGroupType = TypeDefinition.tableOf(TypeDefinition.string(),
                 TypeDefinition.tableOf(TypeDefinition.string(),
                         TypeDefinition.listOf(TypeDefinition.integer())));
-
-        Map<String, List<Integer>> firePools = new HashMap<>();
-        firePools.put("common", Arrays.asList(10, 20, 30));
-        firePools.put("rare", Arrays.asList(100));
-
-        Map<String, List<Integer>> waterPools = new HashMap<>();
-        waterPools.put("common", Arrays.asList(5, 15));
-
-        Map<String, Map<String, List<Integer>>> input = new HashMap<>();
-        input.put("fire", firePools);
-        input.put("water", waterPools);
+        Map<String, List<Integer>> firePools = Map.of("common", Arrays.asList(10, 20, 30), "rare",
+                List.of(100));
+        Map<String, List<Integer>> waterPools = Map.of("common", Arrays.asList(5, 15));
+        Map<String, Map<String, List<Integer>>> grouped = Map.of("fire", firePools, "water",
+                waterPools);
 
         @SuppressWarnings("unchecked")
         Map<String, Map<String, List<Integer>>> result =
                 (Map<String, Map<String, List<Integer>>>) ArgumentConverter
-                        .convertAndValidate(input, nestedGroupType, null);
-
+                        .convertAndValidate(grouped, nestedGroupType, null);
         assertEquals(2, result.size());
         assertEquals(Arrays.asList(10, 20, 30), result.get("fire").get("common"));
         assertEquals(Arrays.asList(100), result.get("fire").get("rare"));
@@ -430,11 +228,7 @@ public class ArgumentConverterTest {
     public void testListWithEnumElements() {
         EnumRegistry enumContext = createTestEnumRegistry();
         TypeDefinition enumListType = TypeDefinition.listOf(TypeDefinition.enumType("Difficulty"));
-
         List<String> input = Arrays.asList("EASY", "NORMAL", "HARD");
-        Object result = ArgumentConverter.convertAndValidate(input, enumListType, enumContext);
-        assertNotNull(result);
-        assertTrue(result instanceof List);
+        assertTrue(ArgumentConverter.convertAndValidate(input, enumListType, enumContext) instanceof List);
     }
 }
-
